mediaview: Recognize more MIME types.

Android uses "audio/x-wav" MIME type to describe .wav files, while
Chromium knows "audio/wav" only. This patch adds hard-coded mapping
between MIME types and file name extensions taken from Android.

BUG=chromium:685330
TEST=unit_tests
TEST=.wav files recognized in media views

Review-Url: https://codereview.chromium.org/2656973003
Cr-Commit-Position: refs/heads/master@{#446633}

Former-commit-id: 588a513a3772d7cc466568f9007780aee8251003